language_tests/source_files/valid/printf_dynamic_runtime_panic.tr
// EXPECT_EXIT: 1
// EXPECT_STDERR_CONTAINS: printf: unknown format specifier
func main() {
    let format = "%q"
    printf(format, 1)
}
