language_tests/source_files/invalid/printf_bad_specifier_literal.tr
func main() {
    printf("%q", 1)
}
